--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <script src="clean.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
         <!-- <ul id="user-list"></ul> -->
